// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeopleListItem component renders a local participant properly 1`] = `
<div
  className="webex-people-list-item item"
  title="Dr Dre"
>
  <ForwardRef(ContextTransform(ListItem))
    onClick={[Function]}
    title="Dr Dre"
    type="small"
  >
    <ListItemSection
      className=""
      position="left"
    >
      <div
        className="webex-people-list-avatar avatar"
      >
        <Connect(PresenceAvatar)
          avatarId="1"
          name="Dr Dre"
          size={28}
        />
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="center"
    >
      <div
        className="webex-people-list-name name"
      >
        Dr Dre
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="right"
    />
  </ForwardRef(ContextTransform(ListItem))>
</div>
`;

exports[`PeopleListItem component renders a local participant with email properly 1`] = `
<div
  className="webex-people-list-item item"
  title="Dr Dre (dreday@deathrowrecords.net)"
>
  <ForwardRef(ContextTransform(ListItem))
    onClick={[Function]}
    title="Dr Dre"
    type="small"
  >
    <ListItemSection
      className=""
      position="left"
    >
      <div
        className="webex-people-list-avatar avatar"
      >
        <Connect(PresenceAvatar)
          avatarId="1"
          name="Dr Dre"
          size={28}
        />
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="center"
    >
      <div
        className="webex-people-list-name name"
      >
        Dr Dre
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="right"
    />
  </ForwardRef(ContextTransform(ListItem))>
</div>
`;

exports[`PeopleListItem component renders an editable participant properly 1`] = `
<div
  className="webex-people-list-item item"
  title="Jimmy Iovine"
>
  <ForwardRef(ContextTransform(ListItem))
    onClick={[Function]}
    title="Jimmy Iovine"
    type="small"
  >
    <ListItemSection
      className=""
      position="left"
    >
      <div
        className="webex-people-list-avatar avatar"
      >
        <Connect(PresenceAvatar)
          avatarId="3"
          name="Jimmy Iovine"
          size={28}
        />
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="center"
    >
      <div
        className="webex-people-list-name name"
      >
        Jimmy Iovine
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="right"
    >
      <div
        className="webex-people-list-more moreButton"
      >
        <Popover
          autoFocusOnFirstElt={false}
          className=""
          closeOnClick={true}
          closeOnFocusLeavesContent={false}
          content={
            <span
              className="webex-people-list-item-popover popover"
            >
              <ForwardRef(ContextTransform(Button))
                ariaLabel="Remove from space"
                onClick={[Function]}
                removeStyle={true}
              >
                Remove from space
              </ForwardRef(ContextTransform(Button))>
            </span>
          }
          delay={0}
          direction="bottom-right"
          doesAnchorToggle={true}
          hideDelay={0}
          hoverDelay={500}
          includeFocusOnHover={true}
          isContained={true}
          onClose={null}
          overflowType="auto"
          popoverTrigger="Click"
          showArrow={true}
          showDelay={0}
          startOpen={false}
        >
          <ForwardRef(ContextTransform(Button))
            ariaLabel="More Details"
            circle={true}
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color=""
              description=""
              name="icon-more_20"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            />
          </ForwardRef(ContextTransform(Button))>
        </Popover>
      </div>
    </ListItemSection>
  </ForwardRef(ContextTransform(ListItem))>
</div>
`;

exports[`PeopleListItem component renders an external participant properly 1`] = `
<div
  className="webex-people-list-item item external webex-people-list-item-external"
  title="Jimmy Iovine"
>
  <ForwardRef(ContextTransform(ListItem))
    onClick={[Function]}
    title="Jimmy Iovine"
    type="small"
  >
    <ListItemSection
      className=""
      position="left"
    >
      <div
        className="webex-people-list-avatar avatar"
      >
        <Connect(PresenceAvatar)
          avatarId="2"
          name="Jimmy Iovine"
          size={28}
        />
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="center"
    >
      <div
        className="webex-people-list-name name"
      >
        Jimmy Iovine
      </div>
    </ListItemSection>
    <ListItemSection
      className=""
      position="right"
    />
  </ForwardRef(ContextTransform(ListItem))>
</div>
`;
